[package]
name = "uor-mavlink"
version = "0.1.0"
edition = "2024"

[dependencies]

rfd900x = { workspace = true }
peripheral-services = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-executor = { version = "0.7.0", features = [
    "nightly",
    "task-arena-size-10240",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
utils = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
bitflags = "2.10.0"
mavlink-core = { version = "0.16.2", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
serde_arrays = { version = "0.2.0", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
rand = { version = "0.9", optional = true, default-features = false, features = [
    "std",
    "std_rng",
] }
ts-rs = { version = "11.0.1", optional = true }
uor-mavlink-macros = { workspace = true }

# This crate breaks uor-mavlink-macros
# mavlink-bindgen = "0.17.0"
[lib]


[features]
default = ["common", "uorocketry", "full"]
dialect = []
communications = []
service = []

# tokio = ["mavlink-core/tokio"]
full = ["communications", "traits", "service"]
uorocketry = ["dialect"]
common = ["dialect"]
embedded = ["mavlink-core/embedded"]
serde = [
    "bitflags/serde",
    "dep:serde",
    "dep:serde_arrays",
    "mavlink-core/serde",
]

# arbitrary = [
#     "dep:arbitrary",
#     "dep:rand",
#     "mavlink-bindgen/arbitrary",
#     "mavlink-core/arbitrary",
#     "bitflags/arbitrary",
# ]

ts = []
standard = []
minimal = []
traits = []
std = ["mavlink-core/std"]
