[package]
name = "uor-proc-macros"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.1"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "2.0.15", features = ["full", "visit", "parsing"] }
