[package]
name = "uor-utils"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true

[features]
# default = ["mavlink/embedded", "mavlink/uorocketry"]
std = [
    "mavlink/std",
    "mavlink/tcp",
    "mavlink/udp",
    "mavlink/direct-serial",
    "mavlink/serde",
]
messages = ["prost"]

[dependencies]
bitflags = { workspace = true, default-features = false, features = ["serde"] }
defmt = { workspace = true }
embassy-stm32 = { workspace = true, features = [
    "defmt",
    "stm32h733vg",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }

# glob = "0.3.3"
# prost-build = "0.14.1"
# protoc-bin-vendored = "3"
embassy-sync = { workspace = true, features = ["defmt"] }
embedded-alloc = { workspace = true }
embedded-io-async = { workspace = true, features = ["defmt-03"] }
heapless = { workspace = true }
mavlink = { git = "https://github.com/uorocketry/rust-mavlink.git", features = [
    "uorocketry",
], default-features = false, optional = true }
prost = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "serde_derive"] }
serde-csv-core = { workspace = true }
ublox = { git = "https://github.com/uorocketry/ublox", default-features = false, features = [
    "serde",
] }
[build-dependencies]
glob = "0.3.3"
prost-build = "0.14.1"
protoc-bin-vendored = "3"
