#TODO: This needs to be seperated into multiple modules. Some apis need to be std (macro apis), and embassy-stm32 throws link errors as it doesn't like std enviroments

[package]
name = "utils"
edition = "2024"
version.workspace = true
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
embassy-stm32 = { workspace = true, features = [
    "stm32h733vg",
    "time-driver-tim2",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-sync = { workspace = true }
embedded-alloc = { workspace = true }
embedded-io-async = { workspace = true, features = ["defmt-03"] }
