[package]
name = "ads126x"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = {workspace = true}
embedded-hal = {workspace = true}
bitflags = { version = "2.3.1", features = ["serde"] }
nb = "1.1.0"
heapless = {workspace = true}
cortex-m = { workspace = true }

[dev-dependencies]
embedded-hal-mock = "0.11.1"